--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1229,6 +1229,9 @@ select {
 .h-20 {
 	height: 5rem;
 }
+.h-screen {
+	height: 100vh;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1274,6 +1277,9 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-screen {
+	width: 100vw;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1294,6 +1300,9 @@ select {
 }
 .flex-shrink-0 {
 	flex-shrink: 0;
+}
+.flex-grow {
+	flex-grow: 1;
 }
 .origin-top-left {
 	transform-origin: top left;
@@ -1519,9 +1528,9 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-gray-300 {
+.bg-gray-400 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1600,6 +1609,10 @@ select {
 .py-10 {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
+}
+.px-5 {
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2035,13 +2048,19 @@ select {
 .disabled\:opacity-25:disabled {
 	opacity: 0.25;
 }
+.dark .dark\:block {
+	display: block;
+}
+.dark .dark\:hidden {
+	display: none;
+}
 .dark .dark\:bg-gray-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
-.dark .dark\:bg-red-300 {
+.dark .dark\:bg-gray-700 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 @media (min-width: 640px) {
 
