--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1260,6 +1260,9 @@ select {
 .row-span-2 {
 	grid-row: span 2 / span 2;
 }
+.-m-2 {
+	margin: -0.5rem;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1271,6 +1274,18 @@ select {
 .my-8 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
+}
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1367,6 +1382,9 @@ select {
 }
 .mb-1 {
 	margin-bottom: 0.25rem;
+}
+.mr-1 {
+	margin-right: 0.25rem;
 }
 .block {
 	display: block;
@@ -1511,6 +1529,9 @@ select {
 }
 .w-7 {
 	width: 1.75rem;
+}
+.w-11\/12 {
+	width: 91.666667%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1924,6 +1945,10 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
+.border-gray-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -2047,6 +2072,18 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
 }
+.bg-red-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
+}
+.bg-blue-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
+}
+.bg-blue-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -2058,6 +2095,9 @@ select {
 }
 .bg-opacity-40 {
 	--tw-bg-opacity: 0.4;
+}
+.bg-opacity-75 {
+	--tw-bg-opacity: 0.75;
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -2198,6 +2238,10 @@ select {
 	padding-top: 1.75rem;
 	padding-bottom: 1.75rem;
 }
+.px-24 {
+	padding-left: 6rem;
+	padding-right: 6rem;
+}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -2282,6 +2326,9 @@ select {
 .pl-5 {
 	padding-left: 1.25rem;
 }
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
 .text-left {
 	text-align: left;
 }
@@ -2341,6 +2388,10 @@ select {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 }
+.text-7xl {
+	font-size: 4.5rem;
+	line-height: 1;
+}
 .font-medium {
 	font-weight: 500;
 }
@@ -2359,6 +2410,9 @@ select {
 .capitalize {
 	text-transform: capitalize;
 }
+.italic {
+	font-style: italic;
+}
 .leading-5 {
 	line-height: 1.25rem;
 }
@@ -2370,6 +2424,9 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
+}
+.leading-normal {
+	line-height: 1.5;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -2469,6 +2526,14 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(110, 231, 183, var(--tw-text-opacity));
 }
+.text-gray-50 {
+	--tw-text-opacity: 1;
+	color: rgba(249, 250, 251, var(--tw-text-opacity));
+}
+.text-blue-700 {
+	--tw-text-opacity: 1;
+	color: rgba(29, 78, 216, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -2509,6 +2574,10 @@ select {
 }
 .shadow-xl {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-none {
+	--tw-shadow: 0 0 #0000;
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
@@ -2715,6 +2784,18 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
+.hover\:bg-blue-100:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-900:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
+}
 .hover\:pl-5:hover {
 	padding-left: 1.25rem;
 }
@@ -2779,6 +2860,10 @@ select {
 .focus\:border-green-400:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(52, 211, 153, var(--tw-border-opacity));
+}
+.focus\:border-blue-500:focus {
+	--tw-border-opacity: 1;
+	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus {
 	--tw-bg-opacity: 1;
@@ -2849,6 +2934,10 @@ select {
 .focus\:ring-opacity-50:focus {
 	--tw-ring-opacity: 0.5;
 }
+.active\:border-blue-500:active {
+	--tw-border-opacity: 1;
+	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
+}
 .active\:bg-gray-100:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -2876,6 +2965,10 @@ select {
 .active\:text-gray-800:active {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
+.active\:outline-none:active {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
 }
 .disabled\:opacity-25:disabled {
 	opacity: 0.25;
@@ -3370,6 +3463,10 @@ select {
 		margin-bottom: 6rem;
 	}
 
+	.md\:block {
+		display: block;
+	}
+
 	.md\:grid {
 		display: grid;
 	}
@@ -3400,6 +3497,10 @@ select {
 
 	.md\:w-1\/3 {
 		width: 33.333333%;
+	}
+
+	.md\:w-96 {
+		width: 24rem;
 	}
 
 	.md\:flex-grow {
@@ -3543,6 +3644,21 @@ select {
 	.md\:text-4xl {
 		font-size: 2.25rem;
 		line-height: 2.5rem;
+	}
+
+	.md\:text-7xl {
+		font-size: 4.5rem;
+		line-height: 1;
+	}
+
+	.md\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+
+	.md\:shadow-lg {
+		--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+		box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 	}
 
 	.md\:backdrop-blur-lg {
@@ -3773,6 +3889,10 @@ select {
 
 	.xl\:block {
 		display: block;
+	}
+
+	.xl\:hidden {
+		display: none;
 	}
 
 	.xl\:grid-cols-6 {
