--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1116,11 +1116,20 @@ select {
 .top-0 {
 	top: 0px;
 }
-.-top-10 {
-	top: -2.5rem;
+.left-2 {
+	left: 0.5rem;
+}
+.-left-72 {
+	left: -18rem;
 }
 .top-1 {
 	top: 0.25rem;
+}
+.right-1 {
+	right: 0.25rem;
+}
+.-top-10 {
+	top: -2.5rem;
 }
 .-right-40 {
 	right: -10rem;
@@ -1152,6 +1161,12 @@ select {
 .-top-12 {
 	top: -3rem;
 }
+.bottom-1 {
+	bottom: 0.25rem;
+}
+.-left-20 {
+	left: -5rem;
+}
 .bottom-24 {
 	bottom: 6rem;
 }
@@ -1170,44 +1185,35 @@ select {
 .left-3 {
 	left: 0.75rem;
 }
-.left-2 {
-	left: 0.5rem;
+.right-3 {
+	right: 0.75rem;
 }
-.-left-72 {
-	left: -18rem;
+.bottom-8 {
+	bottom: 2rem;
 }
-.bottom-5 {
-	bottom: 1.25rem;
+.bottom-7 {
+	bottom: 1.75rem;
 }
-.-left-24 {
-	left: -6rem;
+.bottom-6 {
+	bottom: 1.5rem;
 }
-.left-24 {
-	left: 6rem;
+.bottom-12 {
+	bottom: 3rem;
 }
-.bottom-1 {
-	bottom: 0.25rem;
+.bottom-16 {
+	bottom: 4rem;
 }
-.right-1 {
-	right: 0.25rem;
+.bottom-20 {
+	bottom: 5rem;
 }
-.left-12 {
-	left: 3rem;
+.right-6 {
+	right: 1.5rem;
 }
-.left-6 {
-	left: 1.5rem;
+.right-8 {
+	right: 2rem;
 }
-.-left-2 {
-	left: -0.5rem;
-}
-.-left-20 {
-	left: -5rem;
-}
-.bottom-2 {
-	bottom: 0.5rem;
-}
-.top-3 {
-	top: 0.75rem;
+.right-7 {
+	right: 1.75rem;
 }
 .z-0 {
 	z-index: 0;
@@ -1220,6 +1226,9 @@ select {
 }
 .z-20 {
 	z-index: 20;
+}
+.z-30 {
+	z-index: 30;
 }
 .z-10 {
 	z-index: 10;
@@ -1260,9 +1269,6 @@ select {
 .row-span-2 {
 	grid-row: span 2 / span 2;
 }
-.-m-2 {
-	margin: -0.5rem;
-}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1274,18 +1280,6 @@ select {
 .my-8 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-}
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-}
-.my-2 {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-}
-.my-1 {
-	margin-top: 0.25rem;
-	margin-bottom: 0.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1359,6 +1353,9 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
+.ml-auto {
+	margin-left: auto;
+}
 .mb-28 {
 	margin-bottom: 7rem;
 }
@@ -1373,18 +1370,6 @@ select {
 }
 .mt-0 {
 	margin-top: 0px;
-}
-.ml-auto {
-	margin-left: auto;
-}
-.mb-24 {
-	margin-bottom: 6rem;
-}
-.mb-1 {
-	margin-bottom: 0.25rem;
-}
-.mr-1 {
-	margin-right: 0.25rem;
 }
 .block {
 	display: block;
@@ -1428,6 +1413,9 @@ select {
 .h-20 {
 	height: 5rem;
 }
+.h-1 {
+	height: 0.25rem;
+}
 .h-screen {
 	height: 100vh;
 }
@@ -1443,17 +1431,11 @@ select {
 .h-56 {
 	height: 14rem;
 }
-.h-24 {
-	height: 6rem;
-}
-.h-1 {
-	height: 0.25rem;
-}
 .h-60 {
 	height: 15rem;
 }
-.h-52 {
-	height: 13rem;
+.h-24 {
+	height: 6rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1500,8 +1482,14 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-7 {
+	width: 1.75rem;
+}
 .w-72 {
 	width: 18rem;
+}
+.w-96 {
+	width: 24rem;
 }
 .w-screen {
 	width: 100vw;
@@ -1511,9 +1499,6 @@ select {
 }
 .w-28 {
 	width: 7rem;
-}
-.w-96 {
-	width: 24rem;
 }
 .w-64 {
 	width: 16rem;
@@ -1526,12 +1511,6 @@ select {
 }
 .w-2\/6 {
 	width: 33.333333%;
-}
-.w-7 {
-	width: 1.75rem;
-}
-.w-11\/12 {
-	width: 91.666667%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1736,6 +1715,11 @@ select {
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
 .space-y-10 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1745,11 +1729,6 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
-}
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
@@ -1797,9 +1776,6 @@ select {
 .overflow-hidden {
 	overflow: hidden;
 }
-.overflow-x-auto {
-	overflow-x: auto;
-}
 .overflow-y-auto {
 	overflow-y: auto;
 }
@@ -1828,6 +1804,9 @@ select {
 }
 .rounded-xl {
 	border-radius: 0.75rem;
+}
+.rounded-2xl {
+	border-radius: 1rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -1949,6 +1928,22 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
+.border-gray-50 {
+	--tw-border-opacity: 1;
+	border-color: rgba(249, 250, 251, var(--tw-border-opacity));
+}
+.border-gray-900 {
+	--tw-border-opacity: 1;
+	border-color: rgba(17, 24, 39, var(--tw-border-opacity));
+}
+.border-green-700 {
+	--tw-border-opacity: 1;
+	border-color: rgba(4, 120, 87, var(--tw-border-opacity));
+}
+.border-green-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(16, 185, 129, var(--tw-border-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1997,17 +1992,20 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-red-400 {
+.bg-gray-300 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.bg-transparent {
+	background-color: transparent;
+}
+.bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
 .bg-green-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-.bg-green-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
 .bg-black {
 	--tw-bg-opacity: 1;
@@ -2021,6 +2019,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(236, 253, 245, var(--tw-bg-opacity));
 }
+.bg-green-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+}
 .bg-yellow-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
@@ -2028,41 +2030,6 @@ select {
 .bg-green-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
-}
-.bg-green-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
-}
-.bg-gray-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
-.bg-red-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-}
-.bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-.bg-transparent {
-	background-color: transparent;
-}
-.bg-red-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
-}
-.bg-green-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
-}
-.bg-blue-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}
-.bg-blue-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
 }
 .bg-purple-500 {
 	--tw-bg-opacity: 1;
@@ -2072,32 +2039,33 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
 }
-.bg-red-800 {
+.bg-red-300 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
+	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
 }
-.bg-blue-900 {
+.bg-green-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
+	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
-.bg-blue-700 {
+.bg-green-300 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
+	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+}
+.bg-red-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-opacity-40 {
+	--tw-bg-opacity: 0.4;
 }
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
 }
 .bg-opacity-20 {
 	--tw-bg-opacity: 0.2;
-}
-.bg-opacity-40 {
-	--tw-bg-opacity: 0.4;
-}
-.bg-opacity-75 {
-	--tw-bg-opacity: 0.75;
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -2131,6 +2099,9 @@ select {
 .p-6 {
 	padding: 1.5rem;
 }
+.p-1 {
+	padding: 0.25rem;
+}
 .p-3 {
 	padding: 0.75rem;
 }
@@ -2140,11 +2111,11 @@ select {
 .p-8 {
 	padding: 2rem;
 }
-.p-1 {
-	padding: 0.25rem;
-}
 .p-4 {
 	padding: 1rem;
+}
+.p-7 {
+	padding: 1.75rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2226,6 +2197,10 @@ select {
 	padding-top: 4rem;
 	padding-bottom: 4rem;
 }
+.py-7 {
+	padding-top: 1.75rem;
+	padding-bottom: 1.75rem;
+}
 .py-20 {
 	padding-top: 5rem;
 	padding-bottom: 5rem;
@@ -2233,14 +2208,6 @@ select {
 .px-12 {
 	padding-left: 3rem;
 	padding-right: 3rem;
-}
-.py-7 {
-	padding-top: 1.75rem;
-	padding-bottom: 1.75rem;
-}
-.px-24 {
-	padding-left: 6rem;
-	padding-right: 6rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2314,6 +2281,9 @@ select {
 .pr-5 {
 	padding-right: 1.25rem;
 }
+.pl-5 {
+	padding-left: 1.25rem;
+}
 .pb-16 {
 	padding-bottom: 4rem;
 }
@@ -2322,12 +2292,6 @@ select {
 }
 .pt-3 {
 	padding-top: 0.75rem;
-}
-.pl-5 {
-	padding-left: 1.25rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
 }
 .text-left {
 	text-align: left;
@@ -2388,30 +2352,23 @@ select {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 }
-.text-7xl {
-	font-size: 4.5rem;
-	line-height: 1;
-}
 .font-medium {
 	font-weight: 500;
 }
 .font-semibold {
 	font-weight: 600;
 }
-.font-extrabold {
-	font-weight: 800;
-}
 .font-bold {
 	font-weight: 700;
+}
+.font-extrabold {
+	font-weight: 800;
 }
 .uppercase {
 	text-transform: uppercase;
 }
 .capitalize {
 	text-transform: capitalize;
-}
-.italic {
-	font-style: italic;
 }
 .leading-5 {
 	line-height: 1.25rem;
@@ -2424,9 +2381,6 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
-}
-.leading-normal {
-	line-height: 1.5;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -2522,17 +2476,9 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(30, 58, 138, var(--tw-text-opacity));
 }
-.text-green-300 {
+.text-green-700 {
 	--tw-text-opacity: 1;
-	color: rgba(110, 231, 183, var(--tw-text-opacity));
-}
-.text-gray-50 {
-	--tw-text-opacity: 1;
-	color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-.text-blue-700 {
-	--tw-text-opacity: 1;
-	color: rgba(29, 78, 216, var(--tw-text-opacity));
+	color: rgba(4, 120, 87, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2574,10 +2520,6 @@ select {
 }
 .shadow-xl {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-none {
-	--tw-shadow: 0 0 #0000;
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
@@ -2784,18 +2726,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
-.hover\:bg-blue-100:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
-}
-.hover\:bg-blue-200:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
-}
-.hover\:bg-blue-900:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
-}
 .hover\:pl-5:hover {
 	padding-left: 1.25rem;
 }
@@ -2860,10 +2790,6 @@ select {
 .focus\:border-green-400:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(52, 211, 153, var(--tw-border-opacity));
-}
-.focus\:border-blue-500:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus {
 	--tw-bg-opacity: 1;
@@ -2934,10 +2860,6 @@ select {
 .focus\:ring-opacity-50:focus {
 	--tw-ring-opacity: 0.5;
 }
-.active\:border-blue-500:active {
-	--tw-border-opacity: 1;
-	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
-}
 .active\:bg-gray-100:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -2965,10 +2887,6 @@ select {
 .active\:text-gray-800:active {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
-.active\:outline-none:active {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
 }
 .disabled\:opacity-25:disabled {
 	opacity: 0.25;
@@ -2998,9 +2916,8 @@ select {
 .group:hover .group-hover\:-left-2 {
 	left: -0.5rem;
 }
-.group:hover .group-hover\:bg-black {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+.group:hover .group-hover\:block {
+	display: block;
 }
 .group:hover .group-hover\:bg-green-400 {
 	--tw-bg-opacity: 1;
@@ -3013,19 +2930,16 @@ select {
 .dark .dark\:block {
 	display: block;
 }
-.dark .dark\:inline-flex {
-	display: inline-flex;
-}
 .dark .dark\:hidden {
 	display: none;
-}
-.dark .dark\:border-gray-100 {
-	--tw-border-opacity: 1;
-	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 .dark .dark\:border-gray-600 {
 	--tw-border-opacity: 1;
 	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+.dark .dark\:border-gray-100 {
+	--tw-border-opacity: 1;
+	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 .dark .dark\:bg-gray-700 {
 	--tw-bg-opacity: 1;
@@ -3034,6 +2948,9 @@ select {
 .dark .dark\:bg-gray-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.dark .dark\:bg-transparent {
+	background-color: transparent;
 }
 .dark .dark\:bg-gray-500 {
 	--tw-bg-opacity: 1;
@@ -3051,9 +2968,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
-.dark .dark\:bg-transparent {
-	background-color: transparent;
-}
 .dark .dark\:bg-opacity-40 {
 	--tw-bg-opacity: 0.4;
 }
@@ -3063,6 +2977,14 @@ select {
 .dark .dark\:text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.dark .dark\:text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.dark .dark\:text-gray-50 {
+	--tw-text-opacity: 1;
+	color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 .dark .dark\:text-gray-200 {
 	--tw-text-opacity: 1;
@@ -3084,21 +3006,9 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
-.dark .dark\:text-gray-50 {
-	--tw-text-opacity: 1;
-	color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-.dark .dark\:text-white {
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
 .dark .dark\:text-green-400 {
 	--tw-text-opacity: 1;
 	color: rgba(52, 211, 153, var(--tw-text-opacity));
-}
-.dark .dark\:text-green-200 {
-	--tw-text-opacity: 1;
-	color: rgba(167, 243, 208, var(--tw-text-opacity));
 }
 .dark .dark\:backdrop-blur-lg {
 	--tw-backdrop-blur: blur(16px);
@@ -3351,12 +3261,12 @@ select {
 		position: relative;
 	}
 
-	.md\:right-6 {
-		right: 1.5rem;
-	}
-
 	.md\:left-0 {
 		left: 0px;
+	}
+
+	.md\:right-6 {
+		right: 1.5rem;
 	}
 
 	.md\:top-0 {
@@ -3375,16 +3285,8 @@ select {
 		bottom: 0px;
 	}
 
-	.md\:left-6 {
-		left: 1.5rem;
-	}
-
-	.md\:right-32 {
-		right: 8rem;
-	}
-
-	.md\:left-24 {
-		left: 6rem;
+	.md\:bottom-2 {
+		bottom: 0.5rem;
 	}
 
 	.md\:bottom-5 {
@@ -3395,8 +3297,12 @@ select {
 		left: 9rem;
 	}
 
-	.md\:bottom-2 {
-		bottom: 0.5rem;
+	.md\:left-6 {
+		left: 1.5rem;
+	}
+
+	.md\:right-32 {
+		right: 8rem;
 	}
 
 	.md\:order-5 {
@@ -3459,14 +3365,6 @@ select {
 		margin-left: 18rem;
 	}
 
-	.md\:mb-24 {
-		margin-bottom: 6rem;
-	}
-
-	.md\:block {
-		display: block;
-	}
-
 	.md\:grid {
 		display: grid;
 	}
@@ -3475,12 +3373,12 @@ select {
 		display: none;
 	}
 
-	.md\:h-auto {
-		height: auto;
-	}
-
 	.md\:h-60 {
 		height: 15rem;
+	}
+
+	.md\:h-auto {
+		height: auto;
 	}
 
 	.md\:w-3\/4 {
@@ -3497,14 +3395,6 @@ select {
 
 	.md\:w-1\/3 {
 		width: 33.333333%;
-	}
-
-	.md\:w-96 {
-		width: 24rem;
-	}
-
-	.md\:flex-grow {
-		flex-grow: 1;
 	}
 
 	.md\:grid-cols-3 {
@@ -3646,21 +3536,6 @@ select {
 		line-height: 2.5rem;
 	}
 
-	.md\:text-7xl {
-		font-size: 4.5rem;
-		line-height: 1;
-	}
-
-	.md\:text-2xl {
-		font-size: 1.5rem;
-		line-height: 2rem;
-	}
-
-	.md\:shadow-lg {
-		--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-		box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-	}
-
 	.md\:backdrop-blur-lg {
 		--tw-backdrop-blur: blur(16px);
 		-webkit-backdrop-filter: var(--tw-backdrop-filter);
@@ -3742,10 +3617,6 @@ select {
 
 	.lg\:ml-auto {
 		margin-left: auto;
-	}
-
-	.lg\:mr-96 {
-		margin-right: 24rem;
 	}
 
 	.lg\:block {
