--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1167,6 +1167,15 @@ select {
 .-left-20 {
 	left: -5rem;
 }
+.right-3 {
+	right: 0.75rem;
+}
+.bottom-20 {
+	bottom: 5rem;
+}
+.right-6 {
+	right: 1.5rem;
+}
 .bottom-24 {
 	bottom: 6rem;
 }
@@ -1185,35 +1194,17 @@ select {
 .left-3 {
 	left: 0.75rem;
 }
-.right-3 {
-	right: 0.75rem;
+.top-3 {
+	top: 0.75rem;
 }
-.bottom-8 {
-	bottom: 2rem;
+.-right-96 {
+	right: -24rem;
 }
-.bottom-7 {
-	bottom: 1.75rem;
+.-left-96 {
+	left: -24rem;
 }
-.bottom-6 {
-	bottom: 1.5rem;
-}
-.bottom-12 {
-	bottom: 3rem;
-}
-.bottom-16 {
-	bottom: 4rem;
-}
-.bottom-20 {
-	bottom: 5rem;
-}
-.right-6 {
-	right: 1.5rem;
-}
-.right-8 {
-	right: 2rem;
-}
-.right-7 {
-	right: 1.75rem;
+.left-1 {
+	left: 0.25rem;
 }
 .z-0 {
 	z-index: 0;
@@ -1224,14 +1215,11 @@ select {
 .z-40 {
 	z-index: 40;
 }
-.z-20 {
-	z-index: 20;
-}
-.z-30 {
-	z-index: 30;
-}
 .z-10 {
 	z-index: 10;
+}
+.z-20 {
+	z-index: 20;
 }
 .order-2 {
 	order: 2;
@@ -1805,9 +1793,6 @@ select {
 .rounded-xl {
 	border-radius: 0.75rem;
 }
-.rounded-2xl {
-	border-radius: 1rem;
-}
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
 	border-bottom-left-radius: 0.375rem;
@@ -1924,26 +1909,6 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
-.border-gray-500 {
-	--tw-border-opacity: 1;
-	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}
-.border-gray-50 {
-	--tw-border-opacity: 1;
-	border-color: rgba(249, 250, 251, var(--tw-border-opacity));
-}
-.border-gray-900 {
-	--tw-border-opacity: 1;
-	border-color: rgba(17, 24, 39, var(--tw-border-opacity));
-}
-.border-green-700 {
-	--tw-border-opacity: 1;
-	border-color: rgba(4, 120, 87, var(--tw-border-opacity));
-}
-.border-green-500 {
-	--tw-border-opacity: 1;
-	border-color: rgba(16, 185, 129, var(--tw-border-opacity));
-}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -2051,10 +2016,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
 }
-.bg-red-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
-}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -2113,9 +2074,6 @@ select {
 }
 .p-4 {
 	padding: 1rem;
-}
-.p-7 {
-	padding: 1.75rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2476,9 +2434,9 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(30, 58, 138, var(--tw-text-opacity));
 }
-.text-green-700 {
+.text-red-300 {
 	--tw-text-opacity: 1;
-	color: rgba(4, 120, 87, var(--tw-text-opacity));
+	color: rgba(252, 165, 165, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2595,6 +2553,9 @@ select {
 .duration-100 {
 	transition-duration: 100ms;
 }
+.duration-500 {
+	transition-duration: 500ms;
+}
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2685,6 +2646,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
 }
+.required\:border-red-500:required {
+	--tw-border-opacity: 1;
+	border-color: rgba(239, 68, 68, var(--tw-border-opacity));
+}
 .hover\:rotate-180:hover {
 	--tw-rotate: 180deg;
 	transform: var(--tw-transform);
@@ -2692,6 +2657,19 @@ select {
 .hover\:scale-75:hover {
 	--tw-scale-x: .75;
 	--tw-scale-y: .75;
+	transform: var(--tw-transform);
+}
+.hover\:scale-150:hover {
+	--tw-scale-x: 1.5;
+	--tw-scale-y: 1.5;
+	transform: var(--tw-transform);
+}
+.hover\:scale-110:hover {
+	--tw-scale-x: 1.1;
+	--tw-scale-y: 1.1;
+	transform: var(--tw-transform);
+}
+.hover\:transform:hover {
 	transform: var(--tw-transform);
 }
 .hover\:border-gray-300:hover {
@@ -2890,6 +2868,10 @@ select {
 }
 .disabled\:opacity-25:disabled {
 	opacity: 0.25;
+}
+.group:required .group-required\:border-red-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(239, 68, 68, var(--tw-border-opacity));
 }
 .group:focus-within .group-focus-within\:-top-2 {
 	top: -0.5rem;
